fixed the run time error